<resources>
    <string name="app_name">MyStash</string>
    <string name="in_phrase">in</string>
    <string name="notification_date_reached">%1$s in %2$d days</string>
    <string name="site_url">www.randomsilo.com</string>
    <string name="logo_description">Cargo Box Stamped with MyStash</string>
    <string name="content_navigate_button_browse">Navigate to Item Browse</string>
    <string name="content_navigate_button_search">Navigate to Item Search</string>
    <string name="content_navigate_button_expired">Navigate to Expired Items</string>
    <string name="content_navigate_button_lists">Navigate to List Maintenance</string>
    <string name="content_navigate_button_settings">Navigate to Settings</string>
    <string name="content_description_item_picture">Picture of Item</string>
    <string name="action_home">Home</string>
    <string name="action_hierarchy">Contains</string>
    <string name="action_save">Save</string>
    <string name="action_help">Help</string>
    <string name="action_details">Details</string>
    <string name="action_property">Properties</string>
    <string name="action_image">Images</string>
    <string name="action_location">Location</string>
    <string name="action_resource">Resources</string>
    <string name="action_schedule">Dates</string>
    <string name="action_metadata">Meta Data</string>
    <string name="button_add_thing">Plus Sign, Add New Item</string>
    <string name="button_add_attention_date">Plus Sign, Define date when an item needs attention</string>
    <string name="button_add_property">Plus Sign, Define property of item</string>
    <string name="button_add_consume">Plus Sign, Define resource consumed by item</string>
    <string name="button_add_provide">Plus Sign, Define resource provided by item</string>
    <string name="button_add_what">Plus Sign, Define what an item is</string>
    <string name="button_add_why">Plus Sign, Define why you have the item</string>
    <string name="button_add_tag">Plus Sign, Add Tag</string>
    <string name="button_remove_thing">Minus Sign, Remove Item</string>
    <string name="button_change_parent">Hierarchy Symbol, Change Item Parent</string>
    <string name="button_save_details">Save Symbol, Save Item Details</string>
    <string name="button_save_schedule">Save Symbol, Save Item Expiration, Maintenance Dates</string>
    <string name="button_database_clear">Clear</string>
    <string name="button_database_export">Export</string>
    <string name="button_database_import">Import</string>
    <string name="button_database_sample">Start Over</string>
    <string name="button_take_picture">Take Picture</string>
    <string name="button_clear_picture">Clear Picture</string>
    <string name="dialog_custom_title">Alert</string>
    <string name="dialog_add_thing_title">Add Item</string>
    <string name="dialog_add_thing_item_name_label">Item Name</string>
    <string name="dialog_add_thing_add_btn">Add</string>
    <string name="dialog_add_thing_cancel_btn">Cancel</string>
    <string name="dialog_add_thing_error">Failed to Add Item</string>
    <string name="database_clear">Database Clear, Successful</string>
    <string name="database_defaults_loaded">Default Lists Loaded</string>
    <string name="database_export">Database Export, Successful</string>
    <string name="database_import">Database Import, Successful</string>
    <string name="dialog_tag_name_label">Tag</string>
    <string name="dialog_tag_description_label">Description</string>
    <string name="dialog_save_btn">Save</string>
    <string name="dialog_remove_btn">Remove</string>
    <string name="dialog_back_btn">Back</string>
    <string name="dialog_cancel_btn">Cancel</string>
    <string name="dialog_remove_btn_msg">Removed</string>
    <string name="dialog_save_btn_msg">Saved</string>
    <string name="dialog_save_resource_title">Edit</string>
    <string name="dialog_save_resource_resource_name_label">Resource</string>
    <string name="dialog_save_resource_resource_description_label">Description</string>
    <string name="dialog_save_resource_new_tag"></string>
    <string name="dialog_save_resource_new_description"></string>
    <string name="dialog_save_property_title">Edit</string>
    <string name="dialog_save_property_property_name_label">Property</string>
    <string name="dialog_save_property_property_description_label">Description</string>
    <string name="dialog_save_property_new_tag"></string>
    <string name="dialog_save_property_new_description"></string>
    <string name="dialog_save_what_title">Edit</string>
    <string name="dialog_save_what_what_name_label">What</string>
    <string name="dialog_save_what_what_description_label">Description</string>
    <string name="dialog_save_what_new_tag"></string>
    <string name="dialog_save_what_new_description"></string>
    <string name="dialog_save_why_title">Edit</string>
    <string name="dialog_save_why_why_name_label">Why</string>
    <string name="dialog_save_why_why_description_label">Description</string>
    <string name="dialog_save_why_new_tag"></string>
    <string name="dialog_save_why_new_description"></string>
    <string name="dialog_save_thing_property_title">Edit</string>
    <string name="dialog_save_thing_property_property_spinner_label">Properties</string>
    <string name="dialog_save_thing_property_property_value_label">Value</string>
    <string name="dialog_save_thing_consume_title">Edit</string>
    <string name="dialog_save_thing_consume_resource_spinner_label">Consumes</string>
    <string name="dialog_save_thing_consume_resource_quantity_label">Quantity</string>
    <string name="dialog_save_thing_consume_resource_details_label">Details</string>
    <string name="dialog_save_thing_provide_title">Edit</string>
    <string name="dialog_save_thing_provide_resource_spinner_label">Provides</string>
    <string name="dialog_save_thing_provide_resource_quantity_label">Quantity</string>
    <string name="dialog_save_thing_provide_resource_details_label">Details</string>
    <string name="dialog_save_thing_what_title">Edit</string>
    <string name="dialog_save_thing_what_what_spinner_label">What</string>
    <string name="dialog_save_thing_what_what_details_label">Details</string>
    <string name="dialog_save_thing_why_title">Edit</string>
    <string name="dialog_save_thing_why_why_spinner_label">Why</string>
    <string name="dialog_save_thing_why_why_details_label">Details</string>
    <string name="dialog_save_attention_date_title">Edit</string>
    <string name="dialog_save_attention_date_attention_date_name_label">Attention Date Name</string>
    <string name="dialog_save_attention_date_attention_date_description_label">Description</string>
    <string name="dialog_save_attention_date_new_tag"></string>
    <string name="dialog_save_attention_date_new_description"></string>
    <string name="dialog_save_thing_attention_date_title">Attention Dates</string>
    <string name="user_msg_bad_date">Bad date, please format like %1$s</string>
    <string name="dialog_change_parent_title">Change Parent</string>
    <string name="dialog_need_a_thing">Select a Thing!</string>
    <string name="dialog_need_to_define_properties">Please add to properties list!</string>
    <string name="dialog_need_to_define_resources">Please add to resource list!</string>
    <string name="dialog_need_to_define_what">Please add to what list!</string>
    <string name="dialog_need_to_define_why">Please add to why list!</string>
    <string name="empty_id">No Id</string>
    <string name="empty_tag">No Tag</string>
    <string name="empty_name">No Name</string>
    <string name="empty_quantity">0</string>
    <string name="empty_description">No Description</string>
    <string name="error_file_not_found">Database file not found</string>
    <string name="error_database_clear_exception">Database Clear, Failed</string>
    <string name="error_database_export_exception">Database Export, Failed</string>
    <string name="error_database_import_exception">Database Import, Failed</string>
    <string name="error_take_picture">Taking Picture, Failed</string>
    <string name="header_item_belongs_to">Belongs To</string>
    <string name="header_children_list">Contains</string>
    <string name="header_settings">Settings</string>
    <string name="header_source_container">List Type</string>
    <string name="header_tag_list">List Values</string>
    <string name="header_attention_date_list">Attention Dates</string>
    <string name="header_property_list">Properties</string>
    <string name="header_consume_list">Consumes</string>
    <string name="header_provide_list">Provides</string>
    <string name="header_what_list">What</string>
    <string name="header_why_list">Why</string>
    <string name="instructions_database_clear">Wipes out existing MyStash</string>
    <string name="instructions_database_export">Exports MyStash to external storage</string>
    <string name="instructions_database_import">Imports mystash.db from external storage</string>
    <string name="instructions_database_sample">Clears MyStash, adds default lists</string>
    <string name="label_thing_tag">Tag</string>
    <string name="label_thing_description">Description</string>
    <string name="label_thing_actual_cost">Actual Cost</string>
    <string name="label_thing_replacement_cost">Replace Cost</string>
    <string name="label_browse_button">Browse</string>
    <string name="label_search_button">Search</string>
    <string name="label_expired_button">Expired</string>
    <string name="label_lists_button">Edit Lists</string>
    <string name="list_resource_name">Resources</string>
    <string name="list_attention_date_name">Attention Dates</string>
    <string name="list_property_name">Properties</string>
    <string name="list_what_name">Whats</string>
    <string name="list_why_name">Whys</string>
    <string name="thing_save_sucess">Saved!</string>
    <string name="thing_save_failure">Failed to Save</string>
    <string name="thing_remove_success">Removed</string>
    <string name="thing_remove_fail">Failed to Remove</string>
    <string name="title_activity_edit_list">Edit Lists</string>
    <string name="action_settings">Settings</string>
    <string name="button_save_location">Save location details</string>
    <string name="button_goto_location">View Map</string>
    <string name="button_set_location">GPS Set Location</string>
    <string name="label_thing_address">Address</string>
    <string name="label_thing_city_state">City, State, Zip</string>
    <string name="label_thing_latitude">Latitude</string>
    <string name="label_thing_longitude">Longitude</string>
    <string name="maps_not_found">Please install a Map App</string>
    <string name="maps_enter_more_data">Enter an address, geo location, or both</string>
    <string name="maps_gps_set">Latitude and Longitude Set</string>
    <string name="maps_save_reminder">Remember to Save!</string>
    <string name="maps_gps_not_available">GPS not available</string>
    <string name="label_thing_expiration_date">Expiration Date</string>
    <string name="label_thing_expiration_notice">Days Notice, Expiration</string>
    <string name="label_thing_maintenance_date">Scheduled Maintenance Date</string>
    <string name="label_thing_maintenance_notice">Days Notice, Maintenance</string>
    <string name="title_activity_notification">Notification</string>
    <string name="notification_too_many_expiring_items">Too many expiring items, see list in MyStash</string>
    <string name="header_expiring_list">Expiring</string>
    <string name="header_expires_in">Days Before Date</string>
    <string name="expiring_btn">List Expiring Items</string>
    <string name="header_search_types">Search Types</string>
    <string name="button_nav_simple_search">Simple Search</string>
    <string name="button_nav_meta_search">Metadata Search</string>
    <string name="button_nav_resource_search">Resource Search</string>
</resources>