<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/action_up"
        android:title=""
		android:icon="@drawable/ic_action_uparrow"
        android:orderInCategory="1"
        android:showAsAction="always" />
    
    <item
    	android:id="@+id/menu_overflow"
    	android:icon="@drawable/ic_action_compass"
    	android:title=""
    	android:orderInCategory="11111"
    	android:showAsAction="always">
	    <menu>
	    <item android:id="@+id/action_home"
			  android:icon="@drawable/ic_action_house"
          	  android:title="@string/action_home"
          	  android:orderInCategory="1"
              android:showAsAction="always" />
    
    	<item android:id="@+id/action_hierarchy"
	          android:icon="@drawable/ic_action_hierarchy"
	          android:title="@string/action_hierarchy"
	          android:orderInCategory="2"
	          android:showAsAction="always" />
	        
	    <item android:id="@+id/action_details"
	          android:icon="@drawable/ic_action_details"
	          android:title="@string/action_details"
	          android:orderInCategory="3"
	          android:showAsAction="always" />
	    
	    <item android:id="@+id/action_schedule"
	          android:icon="@drawable/ic_action_schedule"
	          android:title="@string/action_schedule"
	          android:orderInCategory="4"
	          android:showAsAction="always" />
	    
	    <item android:id="@+id/action_property"
	          android:icon="@drawable/ic_action_property"
	          android:title="@string/action_property"
	          android:orderInCategory="5"
	          android:showAsAction="always" />
	    
	    <item android:id="@+id/action_resource"
	          android:icon="@drawable/ic_action_resource"
	          android:title="@string/action_resource"
	          android:orderInCategory="6"
	          android:showAsAction="always" />
	    
	    <item android:id="@+id/action_metadata"
	          android:icon="@drawable/ic_action_metadata"
	          android:title="@string/action_metadata"
	          android:orderInCategory="7"
	          android:showAsAction="always" />
	    
	    <item android:id="@+id/action_image"
	          android:icon="@drawable/ic_action_image"
	          android:title="@string/action_image"
	          android:orderInCategory="8"
	          android:showAsAction="always" />
	    
	    <item android:id="@+id/action_location"
	          android:icon="@drawable/ic_action_location"
	          android:title="@string/action_location"
	          android:orderInCategory="9"
	          android:showAsAction="always" />
	    <!-- 
	    <item android:id="@+id/action_help"
              android:icon="@drawable/ic_action_swipe"
              android:title="@string/action_help"
              android:orderInCategory="10"
              android:showAsAction="always" />
    	-->
		</menu>
	</item>

</menu>
