<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_id"
        android:textColor="@color/theme_lite"
        android:textSize="@dimen/list_text_size"
        android:visibility="gone" >
    </TextView>

    <TextView
        android:id="@+id/ThingId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_id"
        android:textColor="@color/theme_lite"
        android:textSize="@dimen/list_text_size"
        android:visibility="gone" >
    </TextView>

    <TextView
        android:id="@+id/ResourceId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_id"
        android:textColor="@color/theme_lite"
        android:textSize="@dimen/label_text_size"
        android:visibility="gone" >
    </TextView>

    <TextView
        android:id="@+id/ResourceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/ResourceSpinner"
        android:text="@string/dialog_save_thing_provide_resource_spinner_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/ResourceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </Spinner>

    <TextView
        android:id="@+id/ResourceQuantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/ResourceQuantity"
        android:text="@string/dialog_save_thing_consume_resource_quantity_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ResourceQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <TextView
        android:id="@+id/ResourceDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/ResourceDetails"
        android:text="@string/dialog_save_thing_consume_resource_details_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ResourceDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords" >
    </EditText>

    <LinearLayout
        android:id="@+id/Buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/SaveBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_save_btn" />

        <Button
            android:id="@+id/RemoveBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_remove_btn" />

        <Button
            android:id="@+id/BackBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_back_btn" />
    </LinearLayout>

</LinearLayout>