<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/activity_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:scrollbars="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/SettingsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_search_types"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/theme_lite" />
    
   	<Button
   	    android:id="@+id/SimpleSearchBtn"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_gravity="center_vertical"
   	    android:onClick="navigateSimpleSearch"
   	    android:text="@string/button_nav_simple_search" />
   	
   	<Button
        android:id="@+id/MetaSearchBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="navigateMetaSearch"
        android:text="@string/button_nav_meta_search" />
   	
   	<Button
        android:id="@+id/ResourceSearchBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="navigateResourceSearch"
        android:text="@string/button_nav_resource_search" />

</LinearLayout>