<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   	<TextView
        android:id="@+id/Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_id"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/theme_lite"
        android:visibility="gone">
    </TextView>
    <TextView
        android:id="@+id/ThingId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_id"
        android:textSize="@dimen/list_text_size"
        android:textColor="@color/theme_lite"
        android:visibility="gone">
    </TextView>
    <TextView
        android:id="@+id/WhatId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_id"
        android:textSize="@dimen/label_text_size"
        android:textColor="@color/theme_lite"
        android:visibility="gone">
    </TextView>
    
    
    <TextView
        android:id="@+id/WhatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/WhatSpinner"
        android:text="@string/dialog_save_thing_what_what_spinner_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/WhatSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <TextView
        android:id="@+id/WhatDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/WhatDetails"
        android:text="@string/dialog_save_thing_what_what_details_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <EditText
        android:id="@+id/WhatDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        android:visibility="gone">

    </EditText>

    <LinearLayout
        android:id="@+id/Buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/SaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/dialog_save_btn" />
        
        <Button
            android:id="@+id/RemoveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/dialog_remove_btn" />

        <Button
            android:id="@+id/BackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/dialog_back_btn" />

    </LinearLayout>

</LinearLayout>
